// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalReportArgumentMobile /> should renders correcty when not show 1`] = `
<div
  aria-label="global.menu"
  aria-modal="true"
  data-dialog="true"
  hidden=""
  id="id-g"
  role="dialog"
  style="display:none"
  tabindex="-1"
/>
`;

exports[`<ModalReportArgumentMobile /> should renders correcty with argument 1`] = `
<div
  aria-label="global.menu"
  aria-modal="true"
  data-dialog="true"
  id="id-g"
  role="dialog"
  tabindex="-1"
>
  <div
    class="sc-bdvvtL bSKXj sc-GEbAx cap-modal__overlay"
    style="opacity:0"
  >
    <div
      class="sc-bdvvtL hnbcdn sc-gsNilK cap-modal"
      style="opacity:0;transform:translateY(-20px) translateZ(0)"
    >
      <main
        class="sc-bdvvtL gdNnTf cap-modal__footer"
      >
        <button
          aria-controls="id-g"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="sc-bdvvtL sc-lcepkR fKkohK jVZifq cap-button"
          type="button"
        >
          global.report.submit
        </button>
        <div
          aria-label="global.report.submit"
          aria-modal="true"
          data-dialog="true"
          hidden=""
          id="id-g"
          role="dialog"
          style="display:none"
          tabindex="-1"
        />
      </main>
    </div>
  </div>
</div>
`;
